--- a/movie.list/package.json
+++ b/movie.list/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "sass": "^1.54.5",
+    "sweetalert2": "^11.4.29",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
